@@ -1,12 +1,12 @@
 package m09.s11;
 
-import java.util.Arrays;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Queue;
 
 public class AsQueue {
     public static void main(String[] args) {
-        Queue<Integer> q = new LinkedList<>(Arrays.asList(5, -3, -1, 12, 27, 5));
+        Queue<Integer> q = new LinkedList<>(List.of(5, -3, -1, 12, 27, 5));
         System.out.println(q);
 
         if (q.offer(18)) {
