@@ -1,12 +1,12 @@
 package m09.s12;
 
 import java.util.ArrayDeque;
-import java.util.Arrays;
 import java.util.Deque;
+import java.util.List;
 
 public class AsDeque {
     public static void main(String[] args) {
-        Deque<Integer> deq = new ArrayDeque<Integer>(Arrays.asList(-3, -1, 12, 27, 5));
+        Deque<Integer> deq = new ArrayDeque<Integer>(List.of(-3, -1, 12, 27, 5));
         System.out.println(deq);
 
         deq.addFirst(7);
