@@ -1,11 +1,11 @@
 package m09.s15;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 public class ArrayListUser {
     public static void main(String[] args) {
-        ArrayList<Integer> al = new ArrayList<>(Arrays.asList(23, 12, 18, 5));
+        ArrayList<Integer> al = new ArrayList<>(List.of(23, 12, 18, 5));
         System.out.println("Values in al: " + al);
 
         ArrayList<Integer> al2 = new ArrayList<Integer>();
